Incoporating and completed the rating feature of the website

--- a/aboutus.html
+++ b/aboutus.html
@@ -21,8 +21,8 @@
         <li id="login-link"><a href="login.html">Login</a></li>
         <li id="signup-link"><a href="sign-up.html">Sign Up</a></li>
         <li id="user-menu" style="display:none;position:relative;">
-          <span id="user-name"></span>
-          <img id="user-profile-img" src="" alt="Profile" style="width:32px;height:32px;border-radius:50%;vertical-align:middle;">
+          <img id="user-profile-img" src="" alt="Profile" style="width:32px;height:32px;border-radius:50%;vertical-align:middle;margin-right:10px;">
+          <span id="user-name" style="margin-right:10px;font-weight:bold;"></span>
           <div id="dropdown" style="display:none;position:absolute;background:#fff;border:1px solid #ccc;z-index:100;">
             <a href="#" id="logout-btn">Logout</a>
           </div>
@@ -32,45 +32,47 @@
 </header>
 
 
-<div class="pom-image">
-  <img src="pomodoro_image.jpg" alt="Descriptive Alt Text" />
-</div>
+<div style="flex: 1;">
+  <div class="pom-image">
+    <img src="pomodoro_image.jpg" alt="Descriptive Alt Text" />
+  </div>
 
-<div class="about-us-text">
-    <h1>About Us</h1>
-</div>
+  <div class="about-us-text">
+      <h1>About Us</h1>
+  </div>
 
-<div class="about-us-paragraph">
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur, wirhjshfjshdjhsdhsjd. 
+  <div class="about-us-paragraph">
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+          non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
+          non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur, wirhjshfjshdjhsdhsjd. 
 
-</p>
-</div>
-
-<div class="focus-image">
-  <img src="about-us-image-2.jpg" alt="focus-image" />
-</div>
-
-<div class="focus-paragraph">
-  <p>
-    Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
-    mindfulness, and balance throughout their day. Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
-    mindfulness, and balance throughout their day.Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
-    mindfulness, and balance throughout their day.Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
-    mindfulness, and balance throughout their day.Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
-    mindfulness, and balance throughout their day.Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
-    mindfulness, and balance throughout their day.Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
-    mindfulness, and balance throughout their day. Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
-    mindfulness, and balance throughout 
   </p>
+  </div>
+
+  <div class="focus-image">
+    <img src="about-us-image-2.jpg" alt="focus-image" />
+  </div>
+
+  <div class="focus-paragraph">
+    <p>
+      Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
+      mindfulness, and balance throughout their day. Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
+      mindfulness, and balance throughout their day.Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
+      mindfulness, and balance throughout their day.Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
+      mindfulness, and balance throughout their day.Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
+      mindfulness, and balance throughout their day.Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
+      mindfulness, and balance throughout their day.Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
+      mindfulness, and balance throughout their day. Our focus is to empower users through thoughtful design and intelligent tools that support productivity, 
+      mindfulness, and balance throughout 
+    </p>
+  </div>
 </div>
 
 <script>
@@ -110,6 +112,7 @@ if (logoutBtn) {
   });
 }
 </script>
+
 
 </body>
 </html>
