completing commenting and a quick chnage of the website

--- a/accountpage.html
+++ b/accountpage.html
@@ -30,6 +30,7 @@
       </ul>
     </nav>
 </header>
+<!-- Dynamic header of the website included in the account page -->
 
 <div id="account-logged-in" style="display:none;">
   <div class="account-container">
@@ -74,6 +75,8 @@
     <div class="footer-section right"></div>
   </footer>
 </div>
+
+<!-- When an user is logged in, account details are displayed as listed above -->
 
 <div id="account-logged-out" style="display:none;">
   <div class="image-section">
@@ -218,6 +221,8 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
+
+<!-- JavaScript is handling whether to display the login/logout page of the account page -->
 
 </body>
 </html>
