--- a/home.html
+++ b/home.html
@@ -68,12 +68,13 @@
     then can individuals reclaim control over their workload and minimize stress.
   </p>
   <p>
-     Procrastination often creates a cycle of avoidance that leads to unfinished work and mounting stress. 
-    When tasks are delayed, deadlines approach more quickly, forcing individuals to rush their work or struggle to complete it properly. 
-    This last-minute pressure can result in lower-quality outcomes and a sense of overwhelm, making future tasks seem even more daunting. 
-    Over time, this habit can lead to chronic stress, affecting both mental and physical well-being by increasing anxiety and reducing productivity. 
-    Breaking free from procrastination requires self-discipline, structured planning, and an awareness of its negative effects—only 
-    then can individuals reclaim control over their workload and minimize stress.
+     Ariverderci Procrastinazione is designed to help you break the cycle of delay and reclaim your focus. By customizing your work and break intervals—like 
+     20 minutes of work followed by a 5-minute pause—you can 
+     build a rhythm that suits your energy and goals. 
+     Just enter your total session time, choose your preferred intervals, and let the system guide your productivity. 
+     This structured approach reduces decision fatigue and helps you stay committed without burnout.
+      With a clear schedule and balanced pacing, you’ll find it easier to start, stay on track, and finish strong—stress-free and efficient from the first click.
+
   </p>
 </div>
 
@@ -124,6 +125,8 @@ if (logoutBtn) {
   });
 }
 </script>
+
+<!-- JavaScript continues to handle the dynamic header of each page -->
 
 </body>
 </html>
