--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,8 @@
         </li>
       </ul>
     </nav>
-</header>
+</header>  
+<!-- The dynamic header of the about us page -->
 
 
 <div style="flex: 1;">
@@ -51,7 +52,7 @@
           non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur, wirhjshfjshdjhsdhsjd. 
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
 
   </p>
   </div>
@@ -74,6 +75,8 @@
     </p>
   </div>
 </div>
+
+<!-- Dummy text has been utilised for the about us page -->
 
 <script>
 function checkSession() {
@@ -113,6 +116,7 @@ if (logoutBtn) {
 }
 </script>
 
+<!-- JavaScript is handling the dynamic header of each page, including the about us page -->
 
 </body>
 </html>
